--- a/kalm-install-operator.yaml
+++ b/kalm-install-operator.yaml
@@ -41,7 +41,8 @@ spec:
         spec:
           description: KalmOperatorConfigSpec defines the desired state of KalmOperatorConfig
           properties:
-            dashboardVersion:
+            kalmVersion:
+              description: DashboardVersion               string `json:"dashboardVersion,omitempty"`
               type: string
             skipCertManagerInstallation:
               type: boolean
@@ -391,7 +392,7 @@ spec:
             - --enable-leader-election
           command:
             - /manager
-          image: kalmhq/kalm-operator:latest
+          image: kalmhq/kalm-operator:v0.1.0-alpha.2
           imagePullPolicy: Always
           name: manager
           resources:
