--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -36,7 +36,7 @@ jobs:
           npm run build
       - name: run Lighthouse CI
         run: |
-          apt-get install chromium
+          sudo apt-get install chromium
           npm install -g @lhci/cli@0.4.x
           npm install -g serve
           serve -s build -p 3000 &
