--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -37,7 +37,9 @@ jobs:
       - name: run Lighthouse CI
         run: |
           sudo apt-get update
-          sudo apt-get install chromium
+          sudo apt-get install -y libappindicator1 fonts-liberation
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome*.deb
           npm install -g @lhci/cli@0.4.x
           npm install -g serve
           serve -s build -p 3000 &
