--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -36,11 +36,7 @@ jobs:
           npm run build
       - name: run Lighthouse CI
         run: |
-          # sudo apt-get update
-          # sudo apt-get install -y libappindicator1 fonts-liberation
-          # wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          # sudo dpkg -i google-chrome*.deb
-          npm install -g @lhci/cli@0.4.x
+          npm install -g @lhci/cli@0.4.3
           npm install -g serve
           serve -s build -p 3000 &
           pid=$!
