--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -36,14 +36,12 @@ jobs:
           npm run build
       - name: run Lighthouse CI
         run: |
-          npm install -g @lhci/cli@0.4.3
+          npm install -g @lhci/cli@0.4.*
           npm install -g serve
           serve -s build -p 3000 &
           pid=$!
           echo ${{secrets.LHCI_TOKEN}}
-          lhci collect --settings.chromeFlags="--headless" 
-          # --settings.extraHeaders="{\"authorization\":\"${{secrets.KALM_AUTH_HEADER}}\",\"cookie\":\"${{secrets.KALM_AUTH_COOKIES_TOKEN}}\"}"
-          lhci collect --settings.chromeFlags="--no-sandbox" --settings.emulatedFormFactor="desktop"
-          # --settings.extraHeaders="{\"authorization\":\"${{secrets.KALM_AUTH_HEADER}}\",\"cookie\":\"${{secrets.KALM_AUTH_COOKIES_TOKEN}}\"}" --settings.chromeFlags="--no-sandbox" --settings.emulatedFormFactor="desktop"
+          lhci collect --settings.chromeFlags="--headless" --settings.extraHeaders="{\"authorization\":\"${{secrets.KALM_AUTH_HEADER}}\",\"cookie\":\"${{secrets.KALM_AUTH_COOKIES_TOKEN}}\"}"
+          lhci collect --settings.chromeFlags="--no-sandbox" --settings.emulatedFormFactor="desktop" --settings.extraHeaders="{\"authorization\":\"${{secrets.KALM_AUTH_HEADER}}\",\"cookie\":\"${{secrets.KALM_AUTH_COOKIES_TOKEN}}\"}"
           lhci upload --token ${{secrets.LHCI_TOKEN}}
           kill $pid
