--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
 - bases/core.kalm.dev_singlesignonconfigs.yaml
 - bases/core.kalm.dev_protectedendpoints.yaml
 - bases/core.kalm.dev_deploykeys.yaml
+- bases/core.kalm.dev_acmeservers.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -32,6 +33,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_singlesignonconfigs.yaml
 #- patches/webhook_in_protectedendpoints.yaml
 #- patches/webhook_in_deploykeys.yaml
+#- patches/webhook_in_acmeservers.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -49,6 +51,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_singlesignonconfigs.yaml
 #- patches/cainjection_in_protectedendpoints.yaml
 #- patches/cainjection_in_deploykeys.yaml
+#- patches/cainjection_in_acmeservers.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
