--- a/controller/config/crd/bases/core.kalm.dev_httpscerts.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_httpscerts.yaml
@@ -88,6 +88,8 @@ spec:
               type: integer
             isSignedByTrustedCA:
               type: boolean
+            wildcardCertDNSChallengeDomain:
+              type: string
           type: object
       type: object
   version: v1alpha1
