--- a/controller/config/crd/bases/core.kalm.dev_acmeservers.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_acmeservers.yaml
@@ -15,6 +15,8 @@ spec:
     plural: acmeservers
     singular: acmeserver
   scope: Cluster
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: ACMEServer is the Schema for the acmeservers API
@@ -44,6 +46,17 @@ spec:
           type: object
         status:
           description: ACMEServerStatus defines the observed state of ACMEServer
+          properties:
+            ipForNameServer:
+              type: string
+            ready:
+              description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                of cluster Important: Run "make" to regenerate code after modifying
+                this file'
+              type: boolean
+          required:
+          - ipForNameServer
+          - ready
           type: object
       type: object
   version: v1alpha1
