--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,7 @@ jobs:
       - image: circleci/buildpack-deps:stretch
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - run: cd api
       - run:
           name: Build Docker image
@@ -57,8 +56,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp/workspace
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - checkout
       - run:
           name: Load archived Docker image
@@ -110,8 +108,7 @@ jobs:
       - image: circleci/golang:1.13.11
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - run:
           name: Build Docker image
           working_directory: ./controller
@@ -133,8 +130,7 @@ jobs:
       - image: circleci/golang:1.13.11
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - run:
           name: cp controller
           working_directory: ./operator
